@startuml InputParsing
hide circle
note "Inconsequential methods and attributes omitted" as n1

class InputParsing {
    findStudentByName(masterStudentList:Student[], name:String)
}

class UserInput {

}

class AddStudent {
    addStudent(:Student);
}

class ViewStudent {
    viewStudent(:Student);
}

class EditStudent {
    editStudent(:Student);
}

class DeleteCommands{
    deleteStudent(:Student);
    restoreStudent(:Student);
}

class ListStudentCommands {
    list(:Student[]);
}

class ArchiveCommands {
    archiveStudent(:Student);
    unarchiveStudent(:Student);
}

InputParsing ..r> UserInput
InputParsing ..> AddStudent
InputParsing ..> ViewStudent
InputParsing ..> EditStudent
InputParsing ..> DeleteCommands
InputParsing ..> ListStudentCommands
InputParsing ..> ArchiveCommands

@enduml
